@@ -14,6 +14,7 @@
 
 #import "CCTexture2D.h"
 #import "ccTypes.h"
+#import "ccConfig.h"
 
 /** A class that implements a Texture Atlas.
  Supported features:
@@ -24,14 +25,18 @@
    * Quads can be re-ordered in runtime
    * The TextureAtlas capacity can be increased or decreased in runtime
    * OpenGL component: V3F, C4B, T2F.
- The quads are rendered using an OpenGL ES an interleaved vertex array list
+ The quads are rendered using an OpenGL ES VBO.
+ To render the quads using an interleaved vertex array list, you should modify the ccConfig.h file
  */
 @interface CCTextureAtlas : NSObject {
 	NSUInteger			totalQuads_;
 	NSUInteger			capacity_;
 	ccV3F_C4B_T2F_Quad	*quads_;	// quads to be rendered
 	GLushort			*indices;
-	CCTexture2D			*texture_;	
+	CCTexture2D			*texture_;
+#if CC_TEXTURE_ATLAS_USES_VBO
+	GLuint				buffersVBO[2]; //0: vertex  1: indices
+#endif // CC_TEXTURE_ATLAS_USES_VBO
 }
 
 /** quantity of quads that are going to be drawn */
